syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message NumberMessage {
  int64 id = 1;
}

message RequestMessage {
  int64 first = 1 ;
  int64 last = 2 ;
}

message Empty {}

service NumberGeneratorService {
  rpc getNumberRequest(RequestMessage) returns (stream  NumberMessage);
  //    rpc findAllUsers(Empty) returns (stream UserMessage);
}
